[gd_scene load_steps=19 format=2]

[ext_resource path="res://Asset/LoginBackgounnd.png" type="Texture" id=1]
[ext_resource path="res://Asset/Font/SourceHanSansSC-Normal.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Asset/Button/General/Register.png" type="Texture" id=3]
[ext_resource path="res://Asset/Button/General/Login.png" type="Texture" id=4]
[ext_resource path="res://Login.gd" type="Script" id=5]
[ext_resource path="res://Asset/PopupBackground.png" type="Texture" id=6]
[ext_resource path="res://Asset/Input/InputShort.png" type="Texture" id=7]
[ext_resource path="res://lineedit_style.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 640, 569 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 257, 59 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 257, 59 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="ButtonGroup" id=2]
resource_name = "Gender"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNameLabel" type="Label" parent="GridContainer"]
margin_right = 64.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "账号"

[node name="LineEdit" type="LineEdit" parent="GridContainer"]
margin_left = 72.0
margin_right = 236.0
margin_bottom = 48.0

[node name="PasswordLabel" type="Label" parent="GridContainer"]
margin_top = 56.0
margin_right = 64.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "密码"

[node name="PasswordEdit" type="LineEdit" parent="GridContainer"]
margin_left = 72.0
margin_top = 56.0
margin_right = 236.0
margin_bottom = 104.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 684.956
margin_top = 879.628
margin_right = 724.956
margin_bottom = 919.628
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 228.0
margin_bottom = 85.0
texture_normal = ExtResource( 4 )

[node name="SignupButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 236.0
margin_right = 445.0
margin_bottom = 85.0
texture_normal = ExtResource( 3 )

[node name="RegisterDialog" type="PopupDialog" parent="."]
visible = true
margin_left = 659.721
margin_top = 346.083
margin_right = 1059.72
margin_bottom = 746.083
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="RegisterDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -109.5
margin_right = 120.0
margin_bottom = 109.5
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="RegisterDialog/GridContainer2"]
margin_right = 64.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "账号"

[node name="UsernameEdit" type="LineEdit" parent="RegisterDialog/GridContainer2"]
margin_left = 72.0
margin_right = 240.0
margin_bottom = 48.0
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="PasswordLabel" type="Label" parent="RegisterDialog/GridContainer2"]
margin_top = 56.0
margin_right = 64.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "密码"

[node name="PasswordEdit" type="LineEdit" parent="RegisterDialog/GridContainer2"]
margin_left = 72.0
margin_top = 56.0
margin_right = 240.0
margin_bottom = 104.0
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
secret = true

[node name="NicknameLabel" type="Label" parent="RegisterDialog/GridContainer2"]
margin_top = 112.0
margin_right = 64.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "昵称"

[node name="NicknameEdit" type="LineEdit" parent="RegisterDialog/GridContainer2"]
margin_left = 72.0
margin_top = 112.0
margin_right = 240.0
margin_bottom = 160.0
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="GenderLabel" type="Label" parent="RegisterDialog/GridContainer2"]
margin_top = 169.0
margin_right = 64.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "性别"

[node name="GenderContainer" type="HBoxContainer" parent="RegisterDialog/GridContainer2"]
margin_left = 72.0
margin_top = 168.0
margin_right = 240.0
margin_bottom = 219.0

[node name="MaleCheckBox" type="CheckBox" parent="RegisterDialog/GridContainer2/GenderContainer"]
margin_right = 80.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = SubResource( 2 )
text = "男"

[node name="FemaleCheckBox" type="CheckBox" parent="RegisterDialog/GridContainer2/GenderContainer"]
margin_left = 88.0
margin_right = 168.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = SubResource( 2 )
text = "女"
[connection signal="pressed" from="HBoxContainer/SignupButton" to="." method="_on_SignupButton_pressed"]
